--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles/reset.css" />
+  <!-- <link rel="stylesheet" href="styles/reset.css" />   -->
   <title>Weather Dashboard</title>
 </head>
 
@@ -28,7 +28,7 @@
               <input class="form-input weather-search" type="text" id="search-input" placeholder="London"
                 aria-labelledby="form-heading" aria-controls="today forecast" />
               <div class="input-group-append">
-                <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
+                <button type="submit" class="btn btn-info search-button" id="search-button" aria-label="submit search">
                   Search
                 </button>
                 <hr class="hr weather-hr" />
@@ -36,12 +36,17 @@
             </div>
           </div>
         </form>
+        <!-- Shows a list of past entries for the weather app -->
         <div class="list-group" id="history"></div>
       </aside>
 
       <div class="col-lg-9 pb-3">
+        <!-- Shows the weather for today-->
         <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
+        <!-- Shows the forecast for the next 5 days -->
+        <section id="forecast" class="row mt-3" role="region" aria-live="polite">
+          <h2 class="text-black mb-3">5 Day Forecast:</h2>
+        </section>
       </div>
     </div>
   </div>
@@ -50,7 +55,7 @@
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="script.js"></script>
+  <script src="./assets/JS/script.js"></script>
 </body>
 
 </html>
